# PubSub-Service-Evaluation

./: .gitignore  README.md  generate_data.py  generate_table.py  rebuild_all_services.py  run_all_tests.py  test_data.json  test_harness.py  walkthrough.md
activeMQ/: README.md
activeMQ/cpp-client/: CMakeLists.txt  Makefile  README.md  listener.cpp  publisher.cpp  receiver_async_test.cpp  receiver_test.cpp  sender_async_test.cpp  sender_test.cpp
activeMQ/python-client/: publisher.py  receiver_async_test.py  receiver_test.py  requirements.txt  sender_async_test.py  sender_test.py  subscriber.py
docs/: normalized data handling performance analysis.md  post rewrite summary.md  pre-rewright_PERFORMANCE_ANALYSIS.md
grpc/: README.md
grpc/cpp/: CMakeLists.txt  Makefile  publisher.cpp  receiver_async_test.cpp  receiver_test.cpp  sender_async_test.cpp  sender_test.cpp  server.cpp  subscriber.cpp
grpc/proto/: pubsub.proto  test_data.proto
grpc/python/: publisher.py  pubsub_pb2.py  pubsub_pb2_grpc.py  receiver_async_test.py  receiver_test.py  sender_async_test.py  sender_test.py  server.py  subscriber.py  test_data_pb2.py  test_data_pb2_grpc.py
harness/: stats_collector.py  test_harness.py
include/: stats_collector.hpp
logs/: .gitkeep
nats/: Makefile  README.md
nats/cpp/: CMakeLists.txt  Makefile  README.md  publisher.cpp  receiver_async_test.cpp  receiver_test.cpp  sender_async_test.cpp  sender_test.cpp  subscriber.cpp
nats/python/: README.md  publisher.py  receiver_async_test.py  receiver_test.py  sender_async_test.py  sender_test.py  subscriber.py
rabbitmq/: Makefile  README.md
rabbitmq/cpp/: CMakeLists.txt  Makefile  publisher.cpp  receiver_async_test.cpp  receiver_test.cpp  sender_async_test.cpp  sender_test.cpp  subscriber.cpp
rabbitmq/python/: publisher.py  receiver_async_test.py  receiver_test.py  sender_async_test.py  sender_test.py  subscriber.py
redis/: Makefile  README.md
redis/cpp/: CMakeLists.txt  Makefile  receiver_async_test.cpp  receiver_test.cpp  sender_async_test.cpp  sender_test.cpp
redis/python/: receiver_async_test.py  receiver_test.py  sender_async_test.py  sender_test.py
scripts/: generate_delete_prep.py  move_to_staging.py
utils/: messaging.proto  paths.py  repo_root.py
utils/cpp/: message_helpers.hpp  messaging.grpc.pb.cc  messaging.grpc.pb.h  messaging.pb.cc  messaging.pb.h  messaging_utils.cpp  messaging_utils.hpp  receiver.hpp  sender.hpp  stats_collector.hpp  test_data_loader.cpp  test_data_loader.hpp
utils/protobuf/: Makefile
utils/python/: __init__.py  async_sender.py  message_helpers.py  messaging.py  messaging_pb2.py  messaging_pb2_grpc.py  receiver.py  sender.py  stats_collector.py  test_data_loader.py
zeroMQ/: .gitignore  README.md
zeroMQ/cpp/: CMakeLists.txt  Makefile  publisher.cpp  receiver_async_test.cpp  receiver_test.cpp  sender_async_test.cpp  sender_test.cpp  subscriber.cpp
zeroMQ/python/: publisher.py  receiver_async_test.py  receiver_test.py  router.py  sender_async_test.py  sender_test.py  subscriber.py
